rewriting 1